--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,3 @@
-
+github.client.id=ebb6dacaeed0a07dd7bf
+github.client.secret=e647dceb64b2dc895d1ff5e831252a775bde5165
+github.redirect.uri=http://localhost:8080/callback
