连接数据库，进行持久化登录

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,11 @@
+server.port=8887
+
 github.client.id=ebb6dacaeed0a07dd7bf
 github.client.secret=e647dceb64b2dc895d1ff5e831252a775bde5165
-github.redirect.uri=http://localhost:8080/callback
+github.redirect.uri=http://localhost:8887/callback
+
+
+spring.datasource.url=jdbc:mysql://117.50.100.72:3306/community?useUnicode=true&characterEncoding=utf-8&useSSL=false
+spring.datasource.username=root
+spring.datasource.password=123456
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
